# AMATQtAVL

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.doc/: XFOIL_命令总表.md  avl_src_文件说明.md
src/: mainwindow.cpp  mainwindow.ui
src/plane_component/: wing.cpp  wing.h
src/viewport/: viewport3d.cpp  viewport3d.h
